fix: spacing for setting headers in updated Obsidian styling

--- a/source/4-user-interface/settings_plugin-theme-browser.css
+++ b/source/4-user-interface/settings_plugin-theme-browser.css
@@ -168,7 +168,7 @@ body .vertical-tab-content {
 }
 
 .setting-item.setting-item-heading {
-	padding-bottom: 0;
+	margin-bottom: 0;
 	border-bottom: var(--basic-border);
 }
 
